--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ build-backend = "setuptools.build_meta"
 name = "pacmof2"
 version = "0.0.1"
 authors = [
-  { name="Thang Pham", email="thangpham2024@u.northwestern.edu" },
+  { name="Example Author", email="author@example.com" },
 ]
 dependencies = [
     "ase>=3.22",
     "pymatgen>=2023.9.25",
     "scikit-learn==1.3.0"
 ]
-description = "A machine learning package to predict partial atommic charges in metal-organic frameworks"
+description = "A small example package"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
