Update installation instruction

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pacmof2"
-version = "0.0.1"
+version = "1.0.0"
 authors = [
-  { name="Example Author", email="author@example.com" },
+  { name="Thang Pham", email="thangpham2024@u.northwestern.edu" },
 ]
 dependencies = [
     "ase>=3.22",
